# caixa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy.yaml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
caixa-arch/: Cargo.toml
caixa-arch/src/: invariants.rs  lib.rs  report.rs  run.rs
caixa-ast/: Cargo.toml
caixa-ast/src/: lexer.rs  lib.rs  node.rs  parser.rs  span.rs  trivia.rs  visit.rs
caixa-core/: Cargo.toml
caixa-core/src/: aplicacao.rs  behavior.rs  dep.rs  kind.rs  layout.rs  lib.rs  limits.rs  manifest.rs  supervisor.rs  upgrade.rs  version.rs
caixa-core/tests/: parse_caixa.rs
caixa-crd/: Cargo.toml
caixa-crd/src/: build.rs  caixa_cr.rs  conversion.rs  lacre_cr.rs  lib.rs
caixa-crd/tests/: crd_serialization.rs
caixa-feira/: Cargo.toml
caixa-feira/module/: default.nix
caixa-feira/src/: main.rs
caixa-feira/src/cmd/: add.rs  app.rs  build.rs  chart.rs  deploy.rs  fmt.rs  init.rs  lint.rs  lock.rs  mod.rs  nix.rs  publish.rs  resolve.rs  tofu.rs
caixa-feira/tests/: feira_e2e.rs
caixa-flake/: Cargo.toml
caixa-flake/src/: flake.rs  lib.rs  render.rs
caixa-flux/: Cargo.toml  helmrelease.yaml  kustomization.yaml
caixa-flux/src/: lib.rs
caixa-fmt/: Cargo.toml
caixa-fmt/src/: config.rs  lib.rs  lisp_config.rs  printer.rs
caixa-fmt/tests/: proptest_invariants.rs
caixa-helm/: Cargo.toml  Chart.yaml
caixa-helm/src/: lib.rs
caixa-helm/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml  servicemonitor.yaml
caixa-helm/templates/crds/: caixa.pleme.io_crds.yaml
caixa-lacre/: Cargo.toml
caixa-lacre/src/: entry.rs  hash.rs  lib.rs  lock.rs
caixa-lint/: Cargo.toml
caixa-lint/src/: diagnostic.rs  lib.rs  lisp_config.rs  rule.rs  rules.rs  runner.rs
caixa-lsp/: Cargo.toml
caixa-lsp/src/: main.rs
caixa-mesh/: Cargo.toml
caixa-mesh/src/: lib.rs
caixa-operator/: Cargo.toml
caixa-operator/src/: main.rs  reconciler.rs
caixa-pangea/: Cargo.toml
caixa-pangea/src/: hcl_json.rs  lib.rs  manifest_bridge.rs
caixa-provedor/: Cargo.toml
caixa-provedor/src/: backend.rs  ferrite.rs  imports.rs  lib.rs
caixa-resolver/: Cargo.toml
caixa-resolver/src/: cache.rs  config.rs  git.rs  lib.rs  lisp_config.rs  resolve.rs  url.rs
caixa-resolver/tests/: git_integration.rs
caixa-teia/: Cargo.toml
caixa-teia-forge/: Cargo.toml
caixa-teia-forge/src/: backend.rs  emit.rs  lib.rs  naming.rs
caixa-teia/src/: instance.rs  lib.rs  manifest.rs  reference.rs  value.rs
caixa-theme/: Cargo.toml
caixa-theme/src/: blackmatter.rs  lib.rs  palette.rs  style.rs
caixa-ts/: grammar.js  package.json
caixa-ts/queries/: highlights.scm  injections.scm  locals.scm
caixa.nvim/ftdetect/: caixa.vim
caixa.nvim/lua/caixa/: colors.lua  commands.lua  init.lua  lsp.lua  treesitter.lua
caixa.nvim/plugin/: caixa.lua
caixa.nvim/queries/caixa/: highlights.scm
caixa.nvim/syntax/: caixa.vim
examples/checkout-aplicacao/: caixa.lisp
examples/pangea-tatara-akeyless/: caixa.lisp
examples/pangea-tatara-akeyless/.caixa/tofu/: main.tf.json
examples/pangea-tatara-akeyless/infra/: akeyless.lisp  vpc.lisp
examples/pangea-tatara-akeyless/lib/: pangea-tatara-akeyless.lisp
examples/pangea-tatara-akeyless/spec/: arch-check.lisp
operator-chart/: values.yaml
operator-chart/templates/: networkpolicy.yaml  rbac.yaml
operator-chart/templates/crds/: readme.txt
operator-flux/: gitrepository.yaml  kustomization-overlay.yaml  kustomization.yaml  namespace.yaml
