[workspace]
resolver = "2"
members = [
    "caixa-core",
    "caixa-lacre",
    "caixa-ast",
    "caixa-theme",
    "caixa-fmt",
    "caixa-lint",
    "caixa-resolver",
    "caixa-lsp",
    "caixa-teia",
    "caixa-teia-forge",
    "caixa-provedor",
    "caixa-flake",
    "caixa-feira",
    "caixa-crd",
    "caixa-operator",
    "caixa-pangea",
    "caixa-arch",
    "caixa-helm",
    "caixa-flux",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/caixa"
authors = ["pleme-io"]

[workspace.dependencies]
# Workspace-internal crates (path deps).
caixa-core = { path = "caixa-core", version = "0.1.0" }
caixa-lacre = { path = "caixa-lacre", version = "0.1.0" }
caixa-ast = { path = "caixa-ast", version = "0.1.0" }
caixa-theme = { path = "caixa-theme", version = "0.1.0" }
caixa-fmt = { path = "caixa-fmt", version = "0.1.0" }
caixa-lint = { path = "caixa-lint", version = "0.1.0" }
caixa-resolver = { path = "caixa-resolver", version = "0.1.0" }
caixa-teia = { path = "caixa-teia", version = "0.1.0" }
caixa-teia-forge = { path = "caixa-teia-forge", version = "0.1.0" }
caixa-provedor = { path = "caixa-provedor", version = "0.1.0" }
caixa-flake = { path = "caixa-flake", version = "0.1.0" }
caixa-crd = { path = "caixa-crd", version = "0.1.0" }
caixa-pangea = { path = "caixa-pangea", version = "0.1.0" }
caixa-arch = { path = "caixa-arch", version = "0.1.0" }
caixa-helm = { path = "caixa-helm", version = "0.1.0" }
caixa-flux = { path = "caixa-flux", version = "0.1.0" }

# Third-party.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
blake3 = "1.5"
clap = { version = "4", features = ["derive", "env"] }
semver = { version = "1", features = ["serde"] }
hex = "0.4"
dirs = "5"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
tower-lsp = "0.20"
dashmap = "5"
ropey = "1"

# Pleme-io sibling-directory path deps — match sui-eval's convention.
# Consumers outside pleme-io drive the Nix flake, which pins tatara via inputs.
tatara-lisp = { path = "../tatara/tatara-lisp" }
tatara-lisp-derive = { path = "../tatara/tatara-lisp-derive" }
iac-forge = { path = "../iac-forge" }

pretty_assertions = "1"
tempfile = "3"
proptest = "1"
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = { version = "0.8", features = ["chrono"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
