[package]
name = "caixa-crd"
description = "Kubernetes CRD wire formats for the caixa ecosystem — Caixa, Lacre, CaixaBuild."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
caixa-core = { workspace = true }
caixa-lacre = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
