[package]
name = "caixa-fmt"
description = "Canonical formatter for tatara-lisp / caixa sources."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
caixa-ast = { workspace = true }
tatara-lisp = { workspace = true }
tatara-lisp-derive = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
