[package]
name = "caixa-lacre"
description = "Lock file (deflacre) types, BLAKE3 content + closure hashing for the caixa tatara-lisp package system."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
caixa-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
tatara-lisp = { workspace = true }
tatara-lisp-derive = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
