[package]
name = "caixa-pangea"
description = "TeiaManifest → iac-forge IR → HCL/JSON. The Lisp sibling of Pangea's `.build(synth, config)` path — typed all the way down."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
caixa-core = { workspace = true }
caixa-teia = { workspace = true }
iac-forge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
