[package]
name = "caixa-teia"
description = "Tatara-lisp abstract synthesizer — weaves (defteia) forms into iac_forge::IacResource. The Lisp-native sibling of Ruby's Pangea."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
caixa-ast = { workspace = true }
caixa-core = { workspace = true }
iac-forge = { workspace = true }
tatara-lisp = { workspace = true }
tatara-lisp-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
